@@ -4,6 +4,7 @@ amaroK ChangeLog
 
 
 VERSION 1.1:
+  ADD: Deleting files physically from playlist context menu. (BR 75208)
   ADD: Fadeouts for GStreamer-Engine.
   ADD: New Playlist Browser, organizes multiple playlists, and offers smart
        playlist functionality.
